src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-332.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=360:00:01\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab=360:00:01"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "360:00:01"
              loc: "incab=360:00:01"
              locs:
                correction: "360:00:01"
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EANGLEOUTOFRANGE
    loc: "360:00:01"
    message: Angle out of range
    severity: Error
