src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-335.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=3:61\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab=3:61"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "3:61"
              loc: "incab=3:61"
              locs:
                correction: "3:61"
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMINUTESOUTOFRANGE
    loc: "61"
    message: Minutes out of range
    severity: Error
