src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-339.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=3:-01\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab=3:-01"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "3:-01"
              loc: "incab=3:"
              locs:
                correction: "3:"
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGMINUTES
    loc: ""
    message: Missing minutes
    severity: Error
  - code: EUNEXPECTED
    loc: "-01"
    message: Unexpected text
    severity: Error
