src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-34.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units d=f\")"
---
items:
  - loc: "#units d=f"
    locs:
      directive: "#units"
    options:
      - loc: d=f
        locs:
          option: d
          unit: f
        option: PrimaryDistanceUnit
        unit: Feet
    type: UnitsDirective
